# Lecoder-Claude-code-statusline

./: .gitignore  README.md  install.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: test.yml
docker/: Dockerfile.test
docs/: COMPONENTS.md  CONFIGURATION.md  CONTRIBUTING.md  CROSS-PLATFORM.md
helpers/: capture-input.sh  count-capabilities.sh  get-quote.sh  git-changes.sh  git-status.sh  git-worktree.sh  quick-update-usage.sh  quotes.txt  render-bar.sh  system-stats.sh  u  update-usage-cache.sh
statusline/: Config.toml
statusline-rs/: Cargo.toml
statusline-rs/src/: cache.rs  config.rs  containers.rs  context.rs  countdown.rs  git.rs  main.rs  mcp.rs  projects.rs  session.rs  session_timer.rs  skills.rs  stdin_data.rs  teams.rs  theme.rs  usage_limits.rs  vault.rs  worktrees.rs
statusline/lib/components/: container_stats.sh  git_status.sh  git_worktrees.sh  location_time.sh  time_display.sh  version_info.sh
