[package]
name = "statusline-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Arya <universitybuddyai@gmail.com>"]
description = "High-performance Claude Code statusline in Rust"
license = "MIT"

[[bin]]
name = "statusline"
path = "src/main.rs"

[dependencies]
git2 = "0.19"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
